--- a/_config.yml
+++ b/_config.yml
@@ -32,13 +32,12 @@ exclude:
 #   username: vszhub
 #   card: summary
 # logo: logo.png
-# social:
-#   name: Songzi Vong
-#   links:
-#     - https://twitter.com/vszhub
-#     - https://github.com/vszhub
-# google_site_verification: xxxxx
-# lang: en
+social:
+  name: Chaojie Chen
+  links:
+    - https://github.com/FreeZ3e
+google_site_verification: xxxxx
+lang: en
 
 sass:
   sass_dir: _sass
