--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: Chaojie Chen
+  url: https://github.com/FreeZ3e/
+  email: chencj20@foxmail.com
