--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - title: Email
-  url: chencj20@foxmail.com
+  url: mailto://chencj20@foxmail.com
   icon: fas fa-envelope
 - title: Twitter
   url: /
