--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Homepage of Cjchen
+title: Chaojie Chen
 description: A ms student, focus in deep learning field.
 url: https://freez3e.github.io/
 avatar: /avatar.jpeg
